# PracticeProjects

.github/workflows/: run-pytest.yml
solutions/py-find-pi-n/: pyproject.toml  run.py
solutions/py-find-pi-n/src/py_find_pi_n/: find_pi.py
solutions/py-find-pi-n/tests/: test_app.py
