[project]
name = "py-find-pi-n"
version = "0.1.0"
description = ""
authors = [
    {name = "David DH Nguyen",email = "51886638+daviddhnguyen@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "py_find_pi_n", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
